パスワードの場所を設定メニューに移動した

--- a/flaskr/templates/layout.pug
+++ b/flaskr/templates/layout.pug
@@ -38,10 +38,11 @@ html(lang="ja")
                             ul.dropdown-menu(role="menu")
                                 li: a(href="{{ url_for('timerules.index') }}") タイムテーブル編集
                                 li: a(href="{{ url_for('options.index') }}") 各種設定
+                                if current_user.is_authenticated
+                                    li: a(href="{{ url_for('auth.passwd') }}") パスワード変更
                     ul.nav.navbar-nav.navbar-right
                         block menu
                         if current_user.is_authenticated
-                            li: a(href="{{ url_for('auth.passwd') }}") パスワード変更
                             li: a(href="{{ url_for('auth.logout') }}") ログアウト
                         else
                             li: a(href="{{ url_for('auth.login') }}") ログイン
