--- a/flaskr/templates/absences/layout.pug
+++ b/flaskr/templates/absences/layout.pug
@@ -1,5 +1,5 @@
 extends layout.pug
 
 block menu
-    li: a(href="#" target="_blank") 印刷
+    li: a(href="{{ url_for('report_absencelogs.report', yymm=yymm) }}" target="_blank") 印刷
     li: a(href="{{ url_for('index') }}") 一覧
