--- a/flaskr/templates/worklogs/edit.pug
+++ b/flaskr/templates/worklogs/edit.pug
@@ -5,20 +5,20 @@ block title
 block content
     .form-group
         label 氏名
-        div {{ item['name'] }}
+        .form-control:= item['name']
     .form-group
         label 日付
-        div {{ item['yymmdd'] }}
+        .form-control:= item['yymmdd']
     if item['absence']
         .form-group
             label 欠勤
     else
         .form-group
             label 開始時間
-            div {{ item['work_in']}}
+            .form-control:= item['work_in']
         .form-group
             label 終了時間
-            div {{ item['work_out']}}
+            .form-control:= item['work_out']
     form(method="POST")
         +generate_fields(form)
         .btn-group
